--- a/public/src/index.html
+++ b/public/src/index.html
@@ -6,23 +6,25 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale = 1.4">
   <!-- BOOTSTRAP  -->
   <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous">
-  <!-- CUSTOM STYLES  -->
-  <link rel="stylesheet" href="./css/index.css">
   <!-- Controls -->
   <link rel="stylesheet" href="./css/controls.css">
+  <!-- CUSTOM STYLES  -->
+  <link rel="stylesheet" href="./css/index.css">
+  <!-- contact -->
+  <link rel="stylesheet" href="./css/templates/contact.css">
   <!-- Font Awesome  -->
   <script src="https://kit.fontawesome.com/3f81f9b1b7.js" crossorigin="anonymous"></script>
   <title>Document</title>
 </head>
 <body class="position-absolute helper">
-
-  <div class="position-absolute auxReference" id="auxReference" ></div>
-
-  <div class="touch-controls border position-absolute border-dark bg-light rounded-circle" id="addControls" >
-    <div class="touch-controls__joystick bg-dark border rounded-circle position-absolute" id="joystick"></div>
+  <div class="position-absolute auxReference bottom-0 start-0 vh-100 vw-100" id="auxReference" >
   </div>
 
-  <div class="firts-info-container top-0 start-0 left-0 end-0 bottom-0 py-4 position-absolute hidden" id="addHTMLContainer">  
+  <div class="touch-controls border position-absolute border-dark rounded-circle" id="addControls" >
+    <div class="touch-controls__joystick border border-dark rounded-circle position-absolute" id="joystick"></div>
+  </div>
+
+  <div class="firts-info-container top-0 start-0 left-0 end-0 bottom-0 position-absolute hidden" id="addHTMLContainer">  
     <div class="second-info-container position-relative p-4 text-center text-white custom-text-shadow">
       <div class="btn btn-danger position-absolute end-0 top-0" id="closeInfo">x</div>
       <div class="row justify-content-center" id="addHTML" >
